# cloud-security

./: README.md
Cisco Secure Access/PostmanExamples/: Cisco Secure Access.postman_collection.json
Cisco Secure Access/Samples/Identities/sgt-sync/: README.md  main.py  pyproject.toml
Cisco Secure Access/Samples/Identities/sgt-sync/sgt-sync/: config.py  logging_config.py  synchronizer.py
Cisco Secure Access/Samples/Identities/sgt-sync/sgt-sync/clients/: ise_client.py  secure_access_client.py
Cisco Secure Access/Samples/Identities/sgt-sync/sgt-sync/models/: sgt.py
Cisco Secure Access/Samples/Policies/application-lists/application-lists-migrate/: requirements.txt
Cisco Secure Access/Samples/client-samples/Deployments/NetworkTunnels/: requirements.txt
Umbrella/Samples/Deployments/NetworkTunnel/create-tunnel/: Requirements.txt
Umbrella/Samples/Deployments/NetworkTunnel/monitor-tunnel/: Requirements.txt
Umbrella/Samples/Deployments/VirtualAppliances/: Requirements.txt
